@@ -33,3 +33,6 @@ Compress::Zlib = 0
 -body = |  requires('Compress::Bzip2');
 -body = |  requires('Compress::Zlib');
 -body = |}
+
+[Prereqs / TestRequires]
+NetAddr::MAC = 0
