@@ -1,4 +1,5 @@
 use Test::More 0.98;
+use NetAddr::MAC;
 
 use_ok( 'Net::MAC::Vendor' );
 
@@ -15,6 +16,9 @@ foreach my $elem ( @Good ) {
 	my $normalized = Net::MAC::Vendor::normalize_mac( $elem->[0] );
 	is( $normalized, $elem->[1], "MAC $$elem[0] is $$elem[1]" );
 	}
+
+is( '00-16-3E-01-01-01', Net::MAC::Vendor::normalize_mac( NetAddr::MAC->new('00:16:3e:01:01:01') ),
+	'NetAddr::MAC objects work ok as argument to normalize_mac()');
 
 {
 no warnings 'uninitialized';
