@@ -1,7 +1,8 @@
 Revision history for Perl module Net::MAC::Vendor
 
 {{$NEXT}}
-        * Net::SSLeay added to runtime prerequisites.
+	* Net::SSLeay added to runtime prerequisites.
+	* Allow $mac parameter to be a NetAddr::MAC object
 
 1.263     2019-03-26 22:26:49Z
 	* Compress::Bzip2 and Compress::Zlib are now optional prerequisites if
